refactored JobRetrieveStrategy.java, added unit tests