@@ -1,11 +1,11 @@
 package com.dariom.domain.service.impl;
 
-import com.dariom.domain.model.Application;
 import com.dariom.domain.model.Job;
-import com.dariom.domain.model.JobRetrieveStrategy;
 import com.dariom.domain.model.JobStatus;
 import com.dariom.domain.service.JobEntityRepository;
-import org.assertj.core.api.Assertions;
+import com.dariom.domain.strategy.impl.JobStatusSortedStrategy;
+import com.dariom.domain.strategy.impl.JobStatusStrategy;
+import com.dariom.domain.strategy.impl.SortedStrategy;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,12 +15,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.when;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class JobDomainServiceImplTest {
@@ -30,88 +28,129 @@ class JobDomainServiceImplTest {
 
     private JobDomainServiceImpl sut;
 
+    private Job job1open;
+    private Job job2open;
+    private Job job3open;
+    private Job job1closed;
+    private Job job2closed;
+
 
     @BeforeEach
     void setUp() {
         sut = new JobDomainServiceImpl(jobEntityRepository);
-        Job job1open = Job.builder().id(1).title("Software Engineer")
+        job1open = Job.builder().id(1).title("Software Engineer")
                 .description("Develop software")
                 .location("New York")
                 .applications(new ArrayList<>(List.of()))
                 .publishDate(LocalDateTime.of(2024, 3, 2, 14, 30, 0))
                 .status(JobStatus.OPEN)
                 .build();
-        Job job2open = Job.builder().id(2).title("Scrum Master")
+        job2open = Job.builder().id(2).title("Scrum Master")
                         .description("You will scrum")
                         .location("San Francisco")
                         .applications(new ArrayList<>(List.of()))
                         .publishDate(LocalDateTime.of(2024, 3, 1, 14, 30, 0))
                         .status(JobStatus.OPEN)
                         .build();
-        Job jobWithOneApplication = Job.builder().id(3).title("Data Scientist")
+        job3open = Job.builder().id(3).title("Data Scientist")
                         .description("Analyze data")
                         .location("San Francisco")
                         .status(JobStatus.OPEN)
-                        .publishDate(LocalDateTime.of(2024, 4, 5, 14, 30, 0))
-                        .applications(getApplications(1))
+                        .publishDate(LocalDateTime.of(2024, 1, 5, 14, 30, 0))
                         .build();
-        Job jobWithTenApplication = Job.builder().id(4).title("Data Scientist2")
-                        .description("Analyze data")
-                        .location("San Francisco")
-                        .status(JobStatus.OPEN)
-                        .publishDate(LocalDateTime.of(2024, 4, 5, 14, 30, 0))
-                        .applications(getApplications(10))
-                        .build();
-        Job job1closed = Job.builder().id(5).title("Manager")
-                        .description("You will scrum")
+        job1closed = Job.builder().id(5).title("Manager")
+                        .description("You will manage")
                         .location("San Francisco")
                         .applications(new ArrayList<>(List.of()))
                         .publishDate(LocalDateTime.of(2022, 4, 5, 14, 30, 0))
                         .status(JobStatus.CLOSED)
                         .build();
-        when(jobEntityRepository.getAll()).thenReturn(Arrays.asList(job1open, job2open, jobWithOneApplication,
-                jobWithTenApplication,job1closed));
+        job2closed = Job.builder().id(5).title("Manager")
+                .description("You will manage")
+                .location("San Francisco")
+                .applications(new ArrayList<>(List.of()))
+                .publishDate(LocalDateTime.of(2022, 4, 5, 14, 40, 0))
+                .status(JobStatus.CLOSED)
+                .build();
     }
 
     @Test
-    void getAllByStrategyIsNotOpen() {
-        JobRetrieveStrategy jobRetrieveStrategy = JobRetrieveStrategy.builder().open(false).build();
-
-        List<Job> jobs = sut.getAllByStrategy(jobRetrieveStrategy);
-
-        assertEquals(2, jobs.size());
-        assertTrue(jobs.stream().noneMatch(Job::isOpen));
+    void testGetAll() {
+        //arrange
+        when(jobEntityRepository.getAll())
+                .thenReturn(Arrays.asList(job1open, job2open, job3open, job1closed, job2closed));
+        //act
+        List<Job> jobs = sut.getAll();
+        //assert
+        assertNotNull(jobs);
+        assertEquals(5, jobs.size());
+        verify(jobEntityRepository, times(1)).getAll();
     }
 
     @Test
-    void getAllByStrategyIsOpen() {
-        JobRetrieveStrategy jobRetrieveStrategy = JobRetrieveStrategy.builder().open(true).build();
-
-        List<Job> jobs = sut.getAllByStrategy(jobRetrieveStrategy);
-
+    void testGetAllByJobStatusStrategy() {
+        //arrange
+        when(jobEntityRepository.getAllByStatus(JobStatus.OPEN))
+                .thenReturn(List.of(job1open, job2open, job3open));
+        JobStatusStrategy strategy = JobStatusStrategy.builder().status(JobStatus.OPEN).build();
+        //act
+        List<Job> jobs = sut.getAllByStrategy(strategy);
+        //assert
+        assertNotNull(jobs);
         assertEquals(3, jobs.size());
-        assertTrue(jobs.stream().allMatch(Job::isOpen));
+        assertTrue(jobs.stream().allMatch(job -> job.getStatus().equals(JobStatus.OPEN)));
+        verify(jobEntityRepository, times(1))
+                .getAllByStatus(JobStatus.OPEN);
     }
 
     @Test
-    void getAllByStrategyIsOpenOrderByPublishDate() {
-        JobRetrieveStrategy jobRetrieveStrategy =
-                JobRetrieveStrategy.builder().open(true)
-                        .orderByField("publishDate")
-                        .build();
-
-        List<Job> jobs = sut.getAllByStrategy(jobRetrieveStrategy);
-
-        assertEquals(3, jobs.size());
-        assertTrue(jobs.stream().allMatch(Job::isOpen));
-        Assertions.assertThat(jobs).isSortedAccordingTo(Comparator.comparing(Job::getPublishDate));
+    void testGetAllBySortedStrategy() {
+        //arrange
+        final String sortField = "publishDate";
+        when(jobEntityRepository.getAllSortedBy(sortField))
+                .thenReturn(List.of(job3open, job1open, job2open, job2closed, job1closed));
+        SortedStrategy strategy = SortedStrategy.builder().orderByField(sortField).build();
+        //act
+        List<Job> jobs = sut.getAllByStrategy(strategy);
+        //assert
+        assertNotNull(jobs);
+        assertEquals(5, jobs.size());
+        verify(jobEntityRepository, times(1))
+                .getAllSortedBy(sortField);
     }
 
-    private List<Application> getApplications(int n) {
-        List<Application> applications = new ArrayList<>();
-        for (int i = 0; i < n; i++) {
-            applications.add(Application.builder().id(Long.valueOf(Integer.toString(n))).build());
-        }
-        return applications;
+    @Test
+    void testGetAllByStatusSortedStrategy() {
+        //arrange
+        final String sortField = "publishDate";
+        final JobStatus status = JobStatus.OPEN;
+        List<Job> mockResult = List.of(job3open, job1open, job2open);
+        when(jobEntityRepository.getAllByStatusSortedBy(status, sortField))
+                .thenReturn(mockResult);
+        JobStatusSortedStrategy strategy = JobStatusSortedStrategy.builder()
+                                            .status(status)
+                                            .orderByField(sortField)
+                                            .build();
+        //act
+        List<Job> jobs = sut.getAllByStrategy(strategy);
+        //assert
+        assertNotNull(jobs);
+        assertEquals(3, jobs.size());
+        assertTrue(jobs.stream().allMatch(job -> job.getStatus().equals(JobStatus.OPEN)));
+        verify(jobEntityRepository, times(1))
+                .getAllByStatusSortedBy(status, sortField);
+        assertArrayEquals(mockResult.toArray(), jobs.toArray());
+    }
+
+    @Test
+    void testPublishJob() {
+        //arrange
+        Job newJob = new Job();
+        newJob.setTitle("Backend Developer");
+        //act
+        sut.publishJob(newJob);
+        //assert
+        assertEquals(JobStatus.OPEN, newJob.getStatus()); // Ensure status is set to OPEN
+        verify(jobEntityRepository, times(1)).createJob(newJob);
     }
 }
